examples/test/testpolicy18903.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18903
  namespace: namespace18
spec:
  podSelector:
    matchLabels:
      key17: value34
      key47: value16
      key21: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value2
      podSelector:
        matchLabels:
          key37: value49
